--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^0.0.0-experimental-fe419346d-20220105",
+    "react-dom": "^0.0.0-experimental-fe419346d-20220105"
   },
   "devDependencies": {
     "eslint": "8.6.0",
